# dd2424

./: .gitignore  README.md  a1.ipynb  a1.py  a2.py  a3.ipynb  a3.py  a4.ipynb  a4.py  main.py  pyproject.toml
.ipynb_checkpoints/: a1-checkpoint.py  a2-checkpoint.ipynb  a4-checkpoint.ipynb
